test/errors/shadow_native.sl
# expect: COMPERROR
auto print = 3;
